--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
       <h1>WELCOME TO</h1>
       <h1><span>XXXTENTACION</span> music world!!</h1>
       <h5>About XXXTENTACION: </h5>
-      <p class="xx_p"><span class="span_p_1">Jahseh Dwayne Ricardo Onfroy</span>(January 23, 1998 – June 18, 2018), known professionally as
+      <p class="xx_p"><span class="span_p_1">Jahseh Dwayne Ricardo Onfroy</span> (January 23, 1998 – June 18, 2018),
+        known professionally as
         XXXTentacion (often) stylized as XXXTENTACION) and commonly referred to as simply X, was an American rapper,
         singer, and songwriter.
         Though a controversial figure due to his widely publicized legal troubles, XXXTentacion gained a cult following
@@ -37,6 +38,30 @@
   <a class="button_1" href="https://www.instagram.com/xxxtentacion" target="blank_1">INSTAGRAM</a>
   <a class="button_1" href="https://www.facebook.com/" target="blank_2">FACEBOOK</a>
   <a class="button_1" href="https://www.youtube.com/channel/UCM9r1xn6s30OnlJWb-jc3Sw" target="blank_2">YOUTUBE</a>
+
+  <section class="milestone">
+    <div class="first" id="sec_image">
+      <img src="image/main/my-bg2.png" alt="logo2">
+    </div>
+    <div class="first" id="secnd_milestone">
+      <h1> <span class="tentacion_music">XXXTENTACION's Music</span></h1>
+      <h5>Most popular music </h5>
+      <p id="ii_p">XXXTENTACION Song list:
+      <ol>
+        <li>Arms Around You (2018)</li>
+        <li>Bad (2018)</li>
+        <li>Changes (2018)</li>
+        <li>Guardian Angel (2018)</li>
+        <li>Hearteater (2019)</li>
+        <li>I don't even speak spanish lol (2018)</li>
+        <li>Jocelyn Flores (2017)</li>
+        <li>Look At Me! (2017)</li>
+        <li>Moonlight (2018)</li>
+        <li>Sad! (2018)</li>
+      </ol>
+      </p>
+    </div>
+  </section>
 
 </body>
 
