abut xxtentacion to american rapper

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="first">
       <h1>WELCOME TO</h1>
       <h1><span>XXXTENTACION</span> music world!!</h1>
-      <h5>About XXXTENTACION: </h5>
+      <h5>American rapper </h5>
       <p class="xx_p"><span class="span_p_1">Jahseh Dwayne Ricardo Onfroy</span> (January 23, 1998 – June 18, 2018),
         known professionally as
         XXXTentacion (often) stylized as XXXTENTACION) and commonly referred to as simply X, was an American rapper,
