ar bala lager nah

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     </div>
 
     <div class="first">
-      <img src="image/my-bg.png" alt="logo1">
+      <img src="image/my-bg.png">
     </div>
   </section>
 
@@ -41,7 +41,7 @@
 
   <section class="milestone">
     <div class="first" id="sec_image">
-      <img src="image/my-bg2.png" alt="logo2">
+      <img src="image/my-bg2.png">
     </div>
     <div class="first" id="secnd_milestone">
       <h1> <span class="tentacion_music">XXXTENTACION's Music</span></h1>
