--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-  <section>
+  <section class="flex-display">
     <div class="first">
       <h1>WELCOME TO</h1>
-      <h1><span>XXXTENTACION</span> music world!!</h1>
+      <h1><span class="ekeek">XXXTENTACION</span> music world!!</h1>
       <h5>American rapper </h5>
       <p class="xx_p"><span class="span_p_1">Jahseh Dwayne Ricardo Onfroy</span> (January 23, 1998 – June 18, 2018),
         known professionally as
@@ -39,13 +39,13 @@
   <a class="button_1" href="https://www.facebook.com/" target="blank_2">FACEBOOK</a>
   <a class="button_1" href="https://www.youtube.com/channel/UCM9r1xn6s30OnlJWb-jc3Sw" target="blank_2">YOUTUBE</a>
 
-  <section class="milestone">
+  <section class="flex-display" id="flex2">
     <div class="first" id="sec_image">
       <img src="image/my-bg2.png">
     </div>
-    <div class="first" id="secnd_milestone">
+    <div class="first top_music">
       <h1> <span class="tentacion_music">XXXTENTACION's Music</span></h1>
-      <h5>Most popular music </h5>
+      <h5 style="margin-left:  100px; ">MOST POPULAR MUSIC </h5>
       <p id="ii_p">XXXTENTACION Song list:
       <ol id="li_margin">
         <li>Arms Around You (2018)</li>
@@ -62,6 +62,46 @@
       </p>
     </div>
   </section>
+
+  <section>
+    <h1 class="arkoyta">HIT SONG</h1>
+    <div class="flex-display">
+      <div class=" hit_song">
+        <h2>SAD!</h2>
+
+        <P><span>PLOT</span>"Sad!" (stylized in all-caps) is a song by American rapper and singer XXXTentacion from his
+          second studio album, ?
+          8
+          billion streams on Spotify, being one of the most streamed songs on the platform. The song remains X's biggest
+          and
+          arguably most popular hit song to date. A music video for the song was released on June 28, via his YouTube
+          channel.[8]
+          On August 13, 2021, the single was certified Diamond by the RIAA in the US, making it the best-selling emo rap
+          song of
+          all-time.
+          <a class="link_song" target="blank_5" href="https://www.youtube.com/watch?v=pgN-vvVVxMA">Here this music on
+            youtube</a>
+        </P>
+      </div>
+      <div class="hit_song">
+        <h2>HOPE</h2>
+
+        <P> <span>PLOT</span>The often misunderstood rapper, XXXTentacion, felt the need to speak out on the tragedy as
+          a native Floridian. This
+          tragedy hit close to home for X, sparking the artist to create a new record, “Hope,” in memory of the victims.
+          He took
+          to Instagram to explain the intended impact of “Hope.”In wake of America’s latest mass shooting at Florida’s
+          Stoneman Douglas High School, the country is pushing for new gun
+          control reform more than ever to prevent horrific events like the one from ever happening again.
+          XXXTentacion....xxxtentacion
+          <a class="link_song" target="blank_4" href=https://www.youtube.com/watch?v=QRzaall-3T8>Here this music on
+            youtube</a>
+        </P>
+
+      </div>
+    </div>
+  </section>
+  <footer>© 2022 Majharul Islam All rights reserved.</footer>
 
 </body>
 
