--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
           On August 13, 2021, the single was certified Diamond by the RIAA in the US, making it the best-selling emo rap
           song of
           all-time.
-          <a class="link_song" target="blank_5" href="https://www.youtube.com/watch?v=pgN-vvVVxMA">Here this music on
+          <a class="link_song" target="blank_5" href="https://www.youtube.com/watch?v=pgN-vvVVxMA">Hear this music on
             youtube</a>
         </P>
       </div>
@@ -94,7 +94,7 @@
           Stoneman Douglas High School, the country is pushing for new gun
           control reform more than ever to prevent horrific events like the one from ever happening again.
           XXXTentacion....xxxtentacion
-          <a class="link_song" target="blank_4" href=https://www.youtube.com/watch?v=QRzaall-3T8>Here this music on
+          <a class="link_song" target="blank_4" href=https://www.youtube.com/watch?v=QRzaall-3T8>Hear this music on
             youtube</a>
         </P>
 
